--- a/templates/ajax/admin/groups/edit.html.twig
+++ b/templates/ajax/admin/groups/edit.html.twig
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="cell padded rw-4 note note-lightest"><label for="group-desc">{{ 'Name'|trans({},'admin') }}</label></div>
+                    <div class="cell padded rw-4 note note-lightest"><label for="group-desc">{{ 'Beschreibung'|trans({},'admin') }}</label></div>
                     <div class="cell padded rw-4"><textarea id="group-desc">{{ current_group is not null ? current_group.description : '' }}</textarea></div>
                 </div>
 
