--- a/templates/ajax/pm/user_list.html.twig
+++ b/templates/ajax/pm/user_list.html.twig
@@ -8,24 +8,30 @@
             <div class="row-flex wrap">
                 {% for user in active %}
                     <div class="cell"><div class="pm-userbox" x-user-id="{{ user.id }}">
-                            {% if (user.avatar) %}
-                                <div class="pm-avatar" style="background: url({{ path('app_web_avatar', {'uid': user.id, 'name': user.avatar.filename, 'ext': user.avatar.format}) }}) center/cover"></div>
-                            {% else %}
-                                <div class="pm-avatar empty"></div>
-                            {% endif %}
-                            <div class="pm-userbox-name">{{ user.name }}</div>
-                            {% if owner %}
-                                {% if user != app.user %}
-                                    <div class="pm-userbox-action" x-api-call="{{ path('pm_conv_group_user_kick', {gid: gid, uid: user.id}) }}">
-                                        <img src="{{ asset('build/images/icons/small_remove.gif') }}" alt="(X)">
-                                        <div class="tooltip"><b>{{ 'Spieler ausschließen'|trans({},'global') }}</b><br />
-                                            {{ 'Ausgeschlossene Spieler können die vor ihrem Ausschluss geposteten Nachrichten in der Gruppe weiterhin lesen, erhalten allerdings keine neuen Nachrichten mehr und können auch nicht mehr antworten.'|trans({},'global') }}
-                                        </div>
+                        {% if (user.avatar) %}
+                            <div class="pm-avatar" style="background: url({{ path('app_web_avatar', {'uid': user.id, 'name': user.avatar.filename, 'ext': user.avatar.format}) }}) center/cover"></div>
+                        {% else %}
+                            <div class="pm-avatar empty"></div>
+                        {% endif %}
+                        <div class="pm-userbox-name">{{ user.name }}</div>
+                        {% if owner %}
+                            {% if user != app.user %}
+                                <div class="pm-userbox-action" x-api-call="{{ path('pm_conv_group_user_kick', {gid: gid, uid: user.id}) }}">
+                                    <img src="{{ asset('build/images/icons/small_remove.gif') }}" alt="(X)">
+                                    <div class="tooltip"><b>{{ 'Spieler ausschließen'|trans({},'global') }}</b><br />
+                                        {{ 'Ausgeschlossene Spieler können die vor ihrem Ausschluss geposteten Nachrichten in der Gruppe weiterhin lesen, erhalten allerdings keine neuen Nachrichten mehr und können auch nicht mehr antworten.'|trans({},'global') }}
                                     </div>
-                                {% endif %}
+                                </div>
                             {% endif %}
-                        </div></div>
+                        {% endif %}
+                    </div></div>
                 {% endfor %}
+                {% if og %}
+                    <div class="cell"><div class="pm-userbox">
+                        <div class="pm-avatar" style="background: url({{ path('app_web_group_icon', { gid: og.usergroup.id, name: og.avatarName, ext: og.avatarExt }) }}) center/cover"></div>
+                        <div class="pm-userbox-name">{{ og.usergroup.name }}</div>
+                    </div></div>
+                {% endif %}
                 {% if owner and can_add %}
                     <div class="cell"><div class="pm-userbox"><div class="pm-avatar empty"></div><div class="pm-userbox-action" id="pm-add-user-button">
                         <img src="{{ asset('build/images/icons/small_more2.gif') }}" alt="[+]">
