--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -97,6 +97,14 @@
                                     <input type="text" id="global-pm-forum-editor-title" />
                                 </div>
                             </div>
+                            <div id="pm-og-display" class="hidden">
+                                <div class="row">
+                                    <div class="padded cell rw-4"><label>{{'Empfänger'|trans({}, "soul")}}</label></div>
+                                    <div class="padded cell rw-8">
+                                        <div id="pm-og-info-container"></div>
+                                    </div>
+                                </div>
+                            </div>
                             <div id="pm-user-selector">
                                 <div class="row">
                                     <div class="padded cell rw-4"><label for="pm-users-search">{{'Einen Empfänger hinzufügen'|trans({}, "soul")}}</label></div>
@@ -426,6 +434,9 @@
                 document.getElementById('pm-user-list-payload').innerHTML = '';
 
                 editor.innerText = '';
+                document.getElementById('pm-user-selector').classList.remove('hidden');
+                document.getElementById('pm-og-display').classList.add('hidden');
+
                 document.getElementById('pm-forum-editor-container').classList.remove('hidden');
                 document.getElementById('pm-forum-editor-header').innerHTML = '<i class="fa fa-spin fa-circle-notch"></i> {{ 'Wird geladen...'|trans({},'global')|e('js') }}';
 
@@ -455,6 +466,9 @@
                 document.getElementById('pm-new-thread-controls').classList.add('hidden');
 
                 editor.innerText = '';
+                document.getElementById('pm-user-selector').classList.remove('hidden');
+                document.getElementById('pm-og-display').classList.add('hidden');
+
                 document.getElementById('pm-forum-editor-container').classList.remove('hidden');
                 document.getElementById('pm-forum-editor-header').innerHTML = '<i class="fa fa-spin fa-circle-notch"></i> {{ 'Wird geladen...'|trans({},'global')|e('js') }}';
 
@@ -510,6 +524,49 @@
             });
 
             $.msg.setFetchRK({{ rk }});
+
+            {% if command is not empty %}
+                {% set command = command|split('_') %}
+                {% if command|length == 2 %}
+                    {% if command[0] == 'oglink' %}
+                        let editor = document.getElementById('global-pm-forum-editor');
+                        if (!editor) return;
+
+                        $.msg.restoreFetchEndpoint();
+
+                        document.getElementById('gpm-forum-content-container').classList.add('hidden');
+                        document.getElementById('pm-forum-actions-container').classList.add('hidden');
+                        document.getElementById('gpm-forum-content-header').innerText = '{{ 'Vorschau'|trans({},'global')|e('js') }}'
+                        document.getElementById('pm-new-thread-controls').classList.add('hidden');
+                        document.getElementById('pm-user-list-container').classList.add('hidden');
+                        document.getElementById('pm-user-list-payload').innerHTML = '';
+
+                        editor.innerText = '';
+                        document.getElementById('pm-user-selector').classList.add('hidden');
+                        document.getElementById('pm-og-info-container').innerHTML = '';
+                        document.getElementById('pm-og-info-container').appendChild($.html.createElement('<i class="fa fa-pulse fa-spinner" />'))
+                        document.getElementById('pm-og-display').classList.remove('hidden');
+                        $.ajax.background().load( document.getElementById('pm-og-info-container'), '{{ url('pm_og_resolve') }}', false, {og: '{{ command[1]|e('js') }}'});
+
+                        document.getElementById('pm-forum-editor-container').classList.remove('hidden');
+                        document.getElementById('pm-forum-editor-header').innerHTML = '<i class="fa fa-spin fa-circle-notch"></i> {{ 'Wird geladen...'|trans({},'global')|e('js') }}';
+
+                        document.getElementById('gpm-forum-content').innerHTML = '<ul>{{ _self.pm_preview(app.user)|e('js') }}</ul>';
+
+                        document.getElementById('post-office-mobile-wrapper').classList.add('panel-2');
+                        $.html.forEach('.pm-conversation-list>li.selected', e => e.classList.remove('selected'));
+
+                        if (editor) $.ajax.background().load( editor, '{{ url('pm_og_thread_editor_controller') }}', false, {}, function() {
+                            document.getElementById('pm-forum-editor-header').innerText = '{{ 'Eine offizielle Gruppe kontaktieren'|trans({},'global') }}';
+
+                            document.getElementById('gpm-forum-content-container').classList.remove('hidden');
+                            document.getElementById('pm-new-thread-controls').classList.remove('hidden');
+
+                            $.html.forEach('#global-pm-forum-editor-title', e => e.focus());
+                        } );
+                    {% endif %}
+                {% endif %}
+            {% endif %}
         })();
     </script>
 {% endblock %}
