--- a/assets/less/modules/constructions.less
+++ b/assets/less/modules/constructions.less
@@ -166,6 +166,7 @@ div.voted-building {
 
 ul.tabs {
   &.buildings-tabs {
+    &::after { content: ""; display: table; clear: both; }
     margin-bottom: -30px;
     > li {
       margin: 0 3px 0 0;
