--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -48,6 +48,7 @@
 }
 
 .forum-content-format() {
+  word-break: break-word;
   b, strong { color: #afb3cf; text-transform: initial; opacity: .8; }
   i, em { color: #f0d79e; opacity: .7; }
   s, strike, del { opacity: .8; }
