--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1230,6 +1230,15 @@ a.help-button {
     &:hover { color: white; }
 }
 
+div.help {
+  .helpLink {
+    background-image: none;
+    padding-left: 0;
+    color: @myhordes-button-color;
+    font-weight: bold;
+  }
+}
+
 p.book {
     margin-top: 10px;
     padding-left: 0px;
