--- a/templates/ajax/game/town/door.html.twig
+++ b/templates/ajax/game/town/door.html.twig
@@ -28,15 +28,17 @@
     {% embed "ajax/game/town/door_tabs.html.twig" with {'door_section': door_section, 'has_battlement': has_battlement} %}
     {% endembed %}
 
-    <div class="row town-summary">
-        <div class="padded cell rw-4 row-header"><img src="{{ asset('build/images/item/item_plate.gif') }}" alt="" /> {{'Stadtverteidigung'|trans({}, 'game')}}</div>
-        <div class="padded cell rw-8 row-detail">{{def}} <img src="{{ asset('build/images/icons/small_def.gif') }}" alt="" /> (<span class="link" x-ajax-href="{{ path('town_dashboard') }}">{{'Details ansehen'|trans({}, 'game')}}</span>)</div>
-        <div class="padded cell rw-4 row-header"><img src="{{ asset('build/images/item/item_door.gif') }}" alt="" /> {{'Lage'|trans({}, 'game')}}</div>
-        <div class="padded cell rw-8 row-detail">{% if town.door %}
+    <div class="row-flex wrap town-summary">
+        <div class="padded cell rw-4 ellipsis row-header"><img src="{{ asset('build/images/item/item_plate.gif') }}" alt="" /> {{'Stadtverteidigung'|trans({}, 'game')}}</div>
+        <div class="padded cell rw-8 ellipsis row-detail">{{def}} <img src="{{ asset('build/images/icons/small_def.gif') }}" alt="" /> (<span class="link" x-ajax-href="{{ path('town_dashboard') }}">{{'Details ansehen'|trans({}, 'game')}}</span>)</div>
+        <div class="padded cell rw-4 ellipsis row-header"><img src="{{ asset('build/images/item/item_door.gif') }}" alt="" /> {{'Lage'|trans({}, 'game')}}</div>
+        <div class="padded cell rw-8 ellipsis row-detail">
+            {% if town.door %}
                 <span class="warning">{{'Stadttor geöffnet'|trans({}, 'game')}}</span> <span class="small">(<span class="link" x-ajax-href="{{ path("town_citizens") }}">{{'Wer ist draußen?'|trans({}, 'game')}}</span>)</span>
             {% else %}
                 {{'Stadttor geschlossen'|trans({}, 'game')}}
-            {% endif %} </div>
+            {% endif %}
+        </div>
     </div>
 
     <div class="row">
