--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -96,7 +96,7 @@
                         {% if last_post.owner.name == 'Der Rabe' %}
                             {{ 'Der Rabe'|trans({},'global') }}
                         {% else %}
-                            {% set name = town and last_post.owner.activecitizen.town.id == town.id ? last_post.owner.activecitizen.name : last_post.owner.name %}
+                            {% set name = town and last_post.owner.citizenFor(town) ? last_post.owner.citizenFor(town).name : last_post.owner.name %}
                             {{ name }}
                         {% endif %}
                     {% elseif thread.owner %}
