--- a/templates/ajax/game/beyond/ruin.html.twig
+++ b/templates/ajax/game/beyond/ruin.html.twig
@@ -1,4 +1,7 @@
 {% extends "ajax/game/beyond/beyond.html.twig" %}
+{% block title %}
+    {{"Erforschung einer beengten Ruine in erstickender Atmosphäre"|trans({}, 'game')|raw}}
+{% endblock %}
 {% block menu_text %}
     {{ parent() }}
 {% endblock %}
