--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -83,6 +83,9 @@
                     {% for pictoPrototype in pictoPrototypes %}
                         <option value="{{pictoPrototype.id}}">{{ pictoPrototype.label|trans({}, 'game') }}</option>
                     {% endfor %}
+                    {% if app.environment == 'dev' %}
+                        <option value="-42">[ {{ 'Alle'|trans({}, 'game') }} ]</option>
+                    {% endif %}
                 </select>
             </div>
             <div class="padded cell grow-0 shrink-0"><label for="{{ _self.gen_id(prefix,'pictowidget','number')}}">X</label></div>
